# routes/index.js
@@ -1,5 +1,8 @@
-const express = require("express")
-const router = express.Router()
-router.use ("/",require("./swagger"))
-router.use("/contacts",require("./contacts"))
-module.exports = router
+const express = require("express");
+const router = express.Router();
+
+router.use("/contacts", require("./contacts"));
+router.use("/companies", require("./companies"));
+router.use("/", require("./swagger"));
+
+module.exports = router;
